kubernetes/apps/n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "n8n.k8s.local"
  rules:
    - backendRefs:
        - name: n8n
          port: 5678
